# ros_robotics_projects

./: README.md
chapter_10_codes/sensor_sim_gazebo/: CMakeLists.txt  package.xml
chapter_10_codes/sensor_sim_gazebo/launch/: camera.launch  gps.launch  imu.launch  laser.launch  sonar.launch  stereo_camera.launch
chapter_10_codes/sensor_sim_gazebo/urdf/: camera.xacro  gps.xacro  imu.xacro  laser.xacro  sensor.xacro  sonar.xacro  sonar_model.xacro  stereo_camera.xacro
chapter_10_codes/velodyne_description/: CHANGELOG.rst  package.xml
chapter_10_codes/velodyne_description/urdf/: VLP-16.urdf.xacro
chapter_10_codes/velodyne_gazebo_plugins/: CHANGELOG.rst  package.xml
chapter_10_codes/velodyne_gazebo_plugins/src/: GazeboRosVelodyneLaser.cpp
chapter_10_codes/velodyne_simulator/: CHANGELOG.rst  package.xml
chapter_11_codes/ros_cardboard/: .gitignore  build.gradle  module-README.md  settings.gradle
chapter_11_codes/ros_cardboard/ros_cardboard_module/: build.gradle
chapter_11_codes/ros_cardboard/ros_cardboard_module/src/main/: AndroidManifest.xml
chapter_11_codes/ros_cardboard/ros_cardboard_module/src/main/res/values/: strings.xml
chapter_11_codes/vr_leap_teleop/: CMakeLists.txt  package.xml
chapter_11_codes/vr_leap_teleop/launch/: vr_teleop.launch
chapter_11_codes/vr_leap_teleop/scripts/: vr_leap_teleop.py
chapter_12_codes/ros_web_codes/: keyboardteleop.html  multicanvas.html  speechcommands.html  teleop.html
chapter_12_codes/ros_web_codes/examples/: keyboardteleop.html
chapter_12_codes/ros_web_ws/: Robot_Surveillance.html  joint_state_publisher.html
chapter_1_codes/: README.txt
chapter_2_codes/: README.txt
chapter_2_codes/face_tracker_control/: CMakeLists.txt  package.xml
chapter_2_codes/face_tracker_control/config/: pan.yaml  servo_param.yaml
chapter_2_codes/face_tracker_control/launch/: start_dynamixel.launch  start_pan_controller.launch
chapter_2_codes/face_tracker_control/src/: face_tracker_controller.cpp
chapter_2_codes/face_tracker_pkg/: CMakeLists.txt  package.xml
chapter_2_codes/face_tracker_pkg/config/: track.yaml
chapter_2_codes/face_tracker_pkg/launch/: start_dynamixel_tracking.launch  start_tracking.launch  start_usb_cam.launch
chapter_2_codes/face_tracker_pkg/msg/: centroid.msg
chapter_2_codes/face_tracker_pkg/src/: face_tracker_node.cpp
chapter_3_codes/ros_aiml/: CMakeLists.txt  package.xml
chapter_3_codes/ros_aiml/launch/: start_chat.launch  start_speech_chat.launch  start_tts_chat.launch
chapter_3_codes/ros_aiml/scripts/: aiml_client.py  aiml_server.py  aiml_speech_recog_client.py  aiml_tts_client.py
chapter_4_codes/: hello_world.cpp
chapter_4_codes/ADC_modified/: ADC_modified.ino
chapter_5_codes/MPU9250_ROS_DMP/: MPU9250_ROS_DMP_Debug.ino
chapter_5_codes/gesture_teleop/: CMakeLists.txt  package.xml
chapter_5_codes/gesture_teleop/config/: teleop_config.yaml
chapter_5_codes/gesture_teleop/launch/: gesture_teleop.launch  gesture_teleop_turtlebot.launch  gesture_teleop_turtlebot_2D.launch
chapter_5_codes/gesture_teleop/scripts/: gesture_teleop.py
chapter_6_codes/: find_object_2d_gui.launch
chapter_7_codes/: basic_svm.py  basic_tf.py  basic_tf_code.py
chapter_7_codes/ros_ml/: CMakeLists.txt  package.xml
chapter_7_codes/ros_ml/data/: pos_readings.csv
chapter_7_codes/ros_ml/scripts/: ros_svm.py  virtual_sensor.py
chapter_7_codes/rostensorflow/: README.md  image_recognition.py
chapter_8_codes/Matlab/: matlab_publisher.m  teleop.fig  teleop.m
chapter_9_codes/chefbot/: robot_model.stl
chapter_9_codes/chefbot_code/chefbot_bringup/launch/includes/: move_base.launch.xml~
chapter_9_codes/chefbot_code/chefbot_gazebo/: CMakeLists.txt
(+6 files in other folders)
